samples/_failures_safe/1761274870_b4ac7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f56c03d5.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_f56c03d5.c:172:14: error: ‘TOKEN_’ undeclared (first use in this function)
  172 |         case TOKEN_
      |              ^~~~~~
./samples/SAFE/__tmp_f56c03d5.c:172:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f56c03d5.c:172:9: error: expected ‘:’ or ‘...’ at end of input
  172 |         case TOKEN_
      |         ^~~~
./samples/SAFE/__tmp_f56c03d5.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f56c03d5.c:172:9: error: expected declaration or statement at end of input
